Started subscribe app, cleaned up css files

--- a/contact/static/contact/css/contact.css
+++ b/contact/static/contact/css/contact.css
@@ -3,5 +3,11 @@
 }
 
 .contact-container {
-    min-height: 80vh;
+    margin-top: 10rem;
+    min-height: 70vh;
+}
+
+i.fas.fa-phone,
+i.far.fa-clock  {
+    color: #764c87;
 }
