--- a/products/static/products/css/add_edit_product.css
+++ b/products/static/products/css/add_edit_product.css
@@ -19,3 +19,31 @@
     color: #222831;
 }
 
+
+/* ---------------------- PRODUCT FORM ---------------------- */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #FF0505;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #FF0505;
+    border-color: #FF0505;
+    border-radius: 0;
+}
