--- a/templates/base.html
+++ b/templates/base.html
@@ -192,10 +192,10 @@
                 <h4 class="text-left uppercase">Subscribe for product news & discounts </h4>
             </div>
             <div class="col-12 col-lg-5 col-xl-5">
-                <form action="" method="">
+                <form action="{% url 'sub_form' %}" method="POST">
                     {% csrf_token %}
                     <div class="form-group subscribe py-2 w-100">
-                        <input type="email" class="form-control rounded-0" id="email" name="email" placeholder="Enter your e-mail">
+                        <input type="email" class="form-control rounded-0" id="email_address" name="email_address" placeholder="Enter your e-mail">
                         <button class="btn subscribe-button rounded-0" type="submit">
                             <p class="d-none d-sm-block uppercase">Subscribe</p> <i class="far fa-envelope d-sm-none"></i>
                         </button>
