Removed wishlist app, added error pages, secured the order details view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,7 +182,8 @@ a.nav-link:hover,
     text-transform: capitalize;
 } 
 
-.wishlist-container {
+.wishlist-container,
+.error-container {
     min-height: 70vh;
     margin-top: 10rem;
 }
