worked on review model, form, and view

--- a/products/templates/products/includes/details.html
+++ b/products/templates/products/includes/details.html
@@ -1,4 +1,4 @@
-<h4>Details</h4>
+<h4 class="uppercase">Details</h4>
 <hr>
 {{ product.description }} <br>
 <small class="text-muted"> Product SKU: {{ product.sku }}</small> <br>
